test/libhyperion/syntaxTests/inlineAssembly/assembly_dialect_duplicate_option.hyp
function f() pure {
    assembly "qrvmasm" ("memory-safe", "memory-safe") {}
}
// ----
// SyntaxError 7026: (24-76): Inline assembly marked memory-safe multiple times.
